2018.8/_sources/plugins/available/diversity/alpha-correlation.txt
alpha-correlation: Alpha diversity correlation
==============================================


.. raw:: html

   <table class="table action-info">
     <tbody>
       <tr>
         <th scope="row"><p></p>Citations</th>
         <td>

.. bibliography:: diversity:alpha-correlation.bib
   :all:
   :keyprefix: diversity:alpha-correlation:
   :labelprefix: diversity:alpha-correlation:

.. raw:: html

         </td>
       </tr>
     </tbody>
   </table>


.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime diversity alpha-correlation [OPTIONS]

     Determine whether numeric sample metadata columns are correlated with
     alpha diversity.

   Options:
     --i-alpha-diversity ARTIFACT PATH SampleData[AlphaDiversity]
                                     Vector of alpha diversity values by sample.
                                     [required]
     --m-metadata-file MULTIPLE PATH
                                     Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata. The sample
                                     metadata.  [required]
     --p-method [spearman|pearson]   The correlation test to be applied.
                                     [default: spearman]
     --o-visualization VISUALIZATION PATH
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.diversity.visualizers import alpha_correlation

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Alpha diversity correlation

   Determine whether numeric sample metadata columns are correlated with alpha
   diversity.

   Parameters
   ----------
   alpha_diversity : SampleData[AlphaDiversity]
       Vector of alpha diversity values by sample.
   metadata : Metadata
       The sample metadata.
   method : Str % Choices({'pearson', 'spearman'}), optional
       The correlation test to be applied.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>